crates/core/tests/snapshots/store__a_client_scope_is_written_as_a_table_and_removed_when_it_empties.snap
---
source: crates/core/tests/store.rs
expression: text
---
# my precious header comment
version = 1 # schema version

# github powers the code review flow — do not disable
[servers.github]
type = "stdio"
command = "npx"
args = ["-y", "@modelcontextprotocol/server-github"]

[clients.cursor]
servers = ["github"]
max_tools = 40

[clients.cursor.tools]
deny = ["delete_*"]
