crates/core/tests/snapshots/store__set_enabled_touches_only_that_key.snap
---
source: crates/core/tests/store.rs
expression: "std::fs::read_to_string(&path).unwrap()"
---
# my precious header comment
version = 1 # schema version

# github powers the code review flow — do not disable
[servers.github]
type = "stdio"
command = "npx"
args = ["-y", "@modelcontextprotocol/server-github"]
enabled = false
