crates/core/tests/snapshots/store__tool_rules_are_written_as_a_table_and_keep_the_comments_around_them.snap
---
source: crates/core/tests/store.rs
expression: text
---
# my precious header comment
version = 1 # schema version

# github powers the code review flow — do not disable
[servers.github]
type = "stdio"
command = "npx"
args = ["-y", "@modelcontextprotocol/server-github"]

[servers.github.tools]
allow = ["search_repositories"]
deny = ["delete_*"]
