crates/core/tests/snapshots/store__unknown_server_error_lists_known_names-2.snap
---
source: crates/core/tests/store.rs
expression: "store.remove_server(\"nope\").unwrap_err().to_string()"
---
no server named "nope" (known servers: github)
