crates/core/tests/snapshots/store__unknown_server_error_lists_known_names.snap
---
source: crates/core/tests/store.rs
expression: "store.set_enabled(\"nope\", true).unwrap_err().to_string()"
---
no server named "nope" (known servers: github)
